--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
